@@ -23,7 +23,7 @@ Left=595
 Top=39
 Width=944
 Height=763
-Maximized=0
+Maximized=1
 UseRegistry=0
 ResultsPanel.Height=282
 ErrorMessage.Height=75
@@ -31,7 +31,7 @@ ErrorMessage.Visible=1
 FailureList.ColumnWidth[0]=166
 FailureList.ColumnWidth[1]=100
 FailureList.ColumnWidth[2]=620
-FailureList.ColumnWidth[3]=50
+FailureList.ColumnWidth[3]=1022
 HideTestNodesOnOpen=0
 BreakOnFailures=0
 SelectTestedNode=1
