@@ -5,6 +5,13 @@
 
 *******************************************************************
 
+  OposDaisy_1.13_9.exe
+  23 August 2024
+
+  [-] Cashless refunds are prohibited
+  
+*******************************************************************
+
   OposDaisy_1.13_8.exe
   22 August 2024
 
